[package]
name = "rengine"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors =["MuhammadMNorouzi muhammadmnorouzi@gmail.com"]
rust-version = "1.66"
description = "A simple game-engine for fun"
readme = "README.md"
repository = "https://github.com/muhammadmnorouzi/rengine"
keywords = ["gamedev" , "game"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
